<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entering">EnteringActivity</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Вход</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entering_pay_with_phone">Оплатить счёт\nчерез телефон</string>
    <string name="entering_call_waiter">Вызвать официанта\nв&#160;любой момент</string>
    <string name="entering_split_bill">Разделить счёт\nмежду друзьями</string>
    <string name="name">Имя</string>
    <string name="email">Почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="birth_date">День рождения</string>
    <string name="register_agreement_fail">Ошибка открытия браузера</string>
    <string name="register_agreement">Нажимая «Далее» вы принимаете\nПользовательское соглашение</string>
    <string name="register_agreement_url">http://legal.saintlab.com/omnom/user-agreement/</string>
    <string name="register_agreement_mark">Пользовательское соглашение</string>
    <string name="you_forgot_to_enter_birth_date">Вы забыли ввести дату рождения</string>
    <string name="you_forgot_to_enter_name">Вы забыли ввести имя</string>
    <string name="you_forgot_to_enter_phone">Вы забыли ввести номер телефона</string>
    <string name="you_forgot_to_enter_email">Вы забыли ввести e-mail</string>
    <string name="invalid_email">Некорректный e-mail</string>
    <string name="error_can_enter">Можно входить. %1$s</string>
    <string name="can_enter">Можно входить.</string>
    <string name="proceed">Далее</string>
    <string name="title_activity_confirm_phone">ConfirmPhoneActivity</string>
    <string name="confirm_code_sms_text">Введите код из&#160;SMS,\nприсланного на&#160;номер\n%1$s</string>
    <string name="request_new_confirmation_code">Выслать новый код</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="order_updated">Этот счёт обновлён заведением</string>
    <string name="update">Обновить</string>
    <string name="order_closed">Этот счёт закрыт заведением для&#160;просмотра и&#160;оплаты</string>
    <string name="exit">Выйти</string>
    <string name="table_number_format">%1$s Обновить</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_validate">ValidateActivity</string>
    <string name="waiter">Официант</string>
    <string name="bill">Счёт</string>
    <string name="ready_orders">Готовые заказы</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="title_activity_add_card">AddCardActivity</string>
    <string name="order_overall">Итого: %1$s</string>
    <string name="overall">Итого: </string>
    <string name="order_paid">Оплачено: %1$s</string>
    <string name="pay_amount">Оплатить %1$s</string>
    <string name="enter_card_data">Ввести карту</string>
    <string name="amount_is_too_high">Сумма слишком большая</string>
    <string name="pay">Оплатить</string>
    <string name="refuse">Отказаться</string>
    <string name="tip_percent">%1$s%%</string>
    <string name="tip_hint_or">или %1$s</string>
    <string name="i_m_going_to_pay">Я оплачу</string>
    <string name="to_be_paid">К оплате</string>
    <string name="already_paid">Уже оплачено: %1$s</string>
    <string name="everything_paid">Всё оплачено</string>
    <string name="paid_of">%1$s из %2$s</string>
    <string name="tips_another">Другой</string>
    <string name="tips">Чаевые</string>
    <string name="app_version_build">версия %1$s</string>
    <string name="save_card_data">Сохранить данные карты для&#160;следующих платежей</string>
    <string name="add_card">Добавить карту</string>
    <string name="currency_ruble"></string>
    <string name="currency_suffix_ruble">&#160;</string>
    <string name="cardio_app_token">e041fdfc4e9c4c6ba1dbd26969a98d92</string>
    <string name="ready">Готово</string>
    <string name="bind">Привязать</string>
    <string name="title_activity_card_confirm">CardConfirmActivity</string>
    <string name="card_binding">Привязка карты</string>
    <string name="unable_to_bind_card">Не удаётся привязать карту</string>
    <string name="hint_confirm_amount">00.00&#160;</string>
    <string name="secure_payments">Платежи защищены</string>
    <string name="card_confirmation_text">Для&#160;привязки карты вам нужно подтвердить, что&#160;вы её&#160;владелец.\nОт банка должна прийти SMS о списании суммы (до 50 руб.). Укажите эту сумму в поле выше.</string>
    <string name="sms_notifications_off">Вероятно, SMS-уведомления не&#160;подключены.\nНужно посмотреть
        последнее списание\nв&#160;банковской выписке и&#160;узнать сумму.</string>
    <string name="moneyback_info">На самом деле, деньги остались у вас на счёте, но были \"заморожены\".\nВся проверочная сумма
        вернётся вам в ближайшее время. Обычно, это не больше недели, максимум месяц.</string>
    <string name="pay_once">Если посмотреть сумму списания сейчас\nвозможности нет, вы можете однократно\n
        оплатить сумму без&#160;привязки карты.</string>
    <string name="wrong_checksum">Введена неверная проверочная сумма.\nЗагляните в&#160;последнее SMS.
        Там&#160;должно\nбыть сообщение от&#160;банка. Введите\nсумму из&#160;SMS. <u>Если SMS нет?</u></string>
    <string name="no_sms">Если SMS нет?</string>
    <string name="something_went_wrong_try_again">Что-то пошло не&#160;так.\nПовторите попытку</string>
    <string name="err_arguments">Пожалуйста, убедитесь в&#160;правильности ввода параметров и&#160;повторите попытку.</string>
    <string name="err_no_internet">Нет доступа в интернет</string>
    <string name="repeat">Повторить</string>
    <string name="payment_success">Платёж принят</string>
    <string name="order_accepted">Заказ принят</string>
    <string name="order_number">Номер заказа</string>
    <string name="pin_code">Пин-код</string>
    <string name="we_will_invite_you">
        Мы пригласим ваc, когда&#160;заказ будет&#160;готов.\nТакже, проверить готов&#160;ли&#160;ваш&#160;заказ\nможно&#160;здесь.
    </string>
    <string name="we_will_invite_you_mark">здесь</string>
    <string name="sms_sent_to_waiter">Официант получил sms с&#160;суммой чаевых.</string>
    <string name="bill_sent_by_email">Счёт отправлен на&#160;почту.</string>
    <string name="cheque_sent_by_email">Чек об оплате отправлен на&#160;почту.</string>
    <string name="title_activity_thanks">ThanksActivity</string>
    <string name="bill_split_amount_">= %1$s&#160;</string>
    <string name="bill_number_">Счёт %1$s</string>
    <string name="split_the_bill">Разделить счёт</string>
    <string name="close">Закрыть</string>
    <string name="title_plus_tips">+ Чаевые</string>
    <string name="your_has_n_orders">На&#160;вашем столике\nраздельных счетов: %1$s</string>
    <string name="demo_mode">Демо-режим</string>
    <string name="show_demo_mode">Показать демо-пример</string>
    <string name="login_havent_account_yet">Ещё нет аккаунта? Прошу сюда -</string>
    <string name="login_havent_account_registration">регистрация</string>
    <string name="change_phone_title">Изменение номера</string>
    <string name="phone_changed"><u>У меня сменился номер телефона</u></string>
    <string name="enter_previous_phone_number">Укажите ваш предыдущий\nномер телефона</string>
    <string name="phone_change_link_is_sent">На вашу почту была выслана\nссылка для&#160;смены номера\nтелефона</string>
    <string name="phone_country_code">+7</string>
    <string name="are_you_to_quit">Вы действительно хотите выйти?</string>
    <string name="quit">Выйти</string>
    <string name="confirm">Подтвердить</string>
    <string name="card_removal_confirmation">Карта %1$s %2$s</string>
    <string name="unable_to_remove_card_number_try_againt_later">Не&#160;удается удалить карту: %1$s\nПожалуйста, попробуйте позже</string>
    <string name="unable_to_remove_card">Не&#160;удается удалить карту</string>
    <string name="how_many_guests_will_pay">На&#160;скольких гостей делить?</string>
    <string name="welcome_to_">Добро пожаловать в&#160;%1$s</string>
    <string name="balk_notification_user_paid_">%1$s: оплачено по&#160;счету %2$s </string>
    <string name="balk_notification_user_paid_tips">%1$s:&#160;оплачено&#160;по&#160;счету&#160;%2$s&#160; +&#160;чай&#160;%3$s&#160;</string>
    <string name="balk_notification_user_tips_only">%1$s: чаевые %2$s </string>
    <string name="title_activity_restaurants_list">RestaurantsListActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="reserve_table">Бронировать\nстолик</string>
    <string name="to_the_bar">В бар</string>
    <string name="make_an_order">Сделать\nзаказ\nобеда\nв офис</string>
    <string name="takeaway">Заказ\nна вынос</string>
    <string name="to_bar">В бар</string>
    <string name="im_inside_restaurant">За стол</string>
    <string name="takeaway_order">Заказ на&#160;вынос</string>
    <string name="lunch">Заказ обеда в&#160;офис</string>
    <string name="orders_are_accepted_only_from_to">Мы принимаем заказы только\nс&#160;%1$s до&#160;%2$s</string>
    <string name="order_will_be_waiting_for_you">Заказ будет ждать вас\n сегодня %1$s\nпо&#160;адресу\n%2$s</string>
    <string name="order_will_be_delivered">Заказ будет доставлен по&#160;адресу\n%1$s\n&#160;%2$s %3$s %4$s\nориентировочно в&#160;%5$s</string>
    <string name="write_to_us">Напишите нам</string>
    <string name="didnt_find_restaurant">Не нашли любимое заведение?</string>
    <string name="navigate_qr_code">Наведите камеру\nна&#160;QR-код Omnom.\nЧто это такое?</string>
    <string name="navigate_qr_code_mark">Что это такое</string>
    <string name="scan_qr">Сканировать QR</string>
    <string name="scanning">Сканирование</string>
    <string name="not_scanning">Не сканирует?</string>
    <string name="enter_hash">Введите текст с&#160;Omnom-наклейки,\nфлажка или&#160;чека</string>
    <string name="enter_hash_url">http://omnom.menu/</string>
    <string name="omnom_works_here">Omnom работает здесь</string>
    <string name="send_feedback">Написать отзыв</string>
    <string name="facebook_url_fb">fb://profile/1548920272002383</string>
    <string name="facebook_url_http">https://www.facebook.com/omnom.menu/</string>
    <string name="out_of_sale_title">Нет в продаже</string>
    <string name="out_of_sale_message">В&#160;вашем заказе есть блюда, которые больше не&#160;продают:\n%1$s.\n\nУбрать из&#160;заказа и&#160;продолжить?</string>
    <string name="no_order_info">
        Omnom показывает все&#160;заказы, добавленные к&#160;вашему столу.
        На&#160;столе&#160;№%1$s открытых заказов сейчас нет.\n\nВозможно, официант ещё&#160;не&#160;успел его внести.
        Проявите снисходительность, дайте ему пару минут.\n\nЕсли заказа всё&#160;же&#160;нет, уточните у&#160;официанта,
        на&#160;какой стол он добавлен и, если&#160;нужно, определите номер своего стола повторно.
    </string>
    <string name="no_order_info_mark">номер своего стола</string>
    <string name="qr_hint">
        В&#160;Omnom-заведениях QR-код можно найти на&#160;красном флажке, наклейке на&#160;столе или&#160;в&#160;чеке. Наведите на&#160;него телефон, чтобы
        мы узнали ваш стол, а&#160;вы посмотрели счёт или&#160;сделали заказ.\n\nЕсли вы&#160;вне Omnom-заведения, посмотрите, как&#160;работает приложение в&#160;Демо-режиме.
    </string>
    <string name="qr_hint_mark">Демо-режиме</string>
    <string name="table_number">Номер стола в Omnom — %1$s</string>
    <string name="wish_clear">Очистить</string>
    <string name="wish_order">Заказать</string>
    <string name="wish_footer_total">Итого:&#160;</string>
</resources>