<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.omnom.util.view.ErrorEditText
            android:id="@+id/edit_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_medium"
            android:paddingBottom="@dimen/activity_vertical_margin_medium"
            app:showClear="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <com.omnom.util.view.ErrorEditText
            android:id="@+id/edit_email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_medium"
            android:paddingBottom="@dimen/activity_vertical_margin_medium"
            app:showClear="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <com.omnom.util.view.ErrorEditText
            android:id="@+id/edit_phone"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_medium"
            android:paddingBottom="@dimen/activity_vertical_margin_medium"
            app:showClear="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <com.omnom.util.view.ErrorEditText
            android:id="@+id/edit_birth"
            android:hint="@string/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_medium"
            android:paddingBottom="@dimen/activity_vertical_margin_medium"
            app:showClear="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_medium"
            android:paddingBottom="@dimen/activity_vertical_margin_medium"/>

        <TextView
            android:id="@+id/text_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_medium"
            android:paddingBottom="@dimen/activity_vertical_margin_medium"
            android:paddingLeft="@dimen/activity_horizontal_margin_small"
            android:textAppearance="?android:textAppearance"/>

    </LinearLayout>
</ScrollView>
