<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:omnom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            tools:context="com.omnom.android.activity.RestaurantActivity">

            <ImageView
                android:id="@+id/btn_close"
                android:src="@drawable/ic_cross_black"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                style="@style/ImageView.Clickable.Cropped" />

            <com.omnom.android.utils.loader.LoaderView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <include layout="@layout/view_restaurant_info" />

            <Button
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin_xsmall"
                android:paddingLeft="@dimen/activity_horizontal_margin_large"
                android:paddingRight="@dimen/activity_horizontal_margin_large"
                android:background="@drawable/bg_rounded_bordered_black_disabled"
                omnom:fontPath="fonts/Futura-LSF-Omnom-LE-Regular.otf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="144dp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/panel_bottom"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin_small"
        android:background="@color/white_transparent_f0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_bar"
            android:text="@string/to_bar"
            android:drawablePadding="@dimen/drawable_padding_default"
            android:drawableTop="@drawable/ic_bar"
            style="@style/TextView.Restaurant.Landing" />

        <TextView
            android:id="@+id/txt_im_inside"
            android:text="@string/im_inside_restaurant"
            android:drawablePadding="@dimen/drawable_padding_default"
            android:drawableTop="@drawable/ic_im_inside"
            style="@style/TextView.Restaurant.Landing" />

        <TextView
            android:id="@+id/txt_lunch"
            android:text="@string/lunch"
            android:drawablePadding="@dimen/drawable_padding_default"
            android:drawableTop="@drawable/ic_make_order"
            style="@style/TextView.Restaurant.Landing" />

        <TextView
            android:id="@+id/txt_takeaway"
            android:text="@string/takeaway"
            android:drawablePadding="@dimen/drawable_padding_default"
            android:drawableTop="@drawable/ic_takeaway"
            style="@style/TextView.Restaurant.Landing" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom" />

</FrameLayout>

